# weather-station-monitor

./: .gitignore  Cargo.toml  LICENSE  build.rs  memory.x  tsconfig.json
.zed/: settings.json
documents/: olcum_sensors.ino
src/: color.rs  logger.rs  macros.rs  main.rs  network.rs  panic_handler.rs  random.rs  station.rs  watchdog.rs
src/network/: dhcp.rs  web.rs
src/network/web/: handler.rs
src/network/web/handler/routes/: api.rs  mod.rs  template.rs
src/station/: controller.rs  data.rs  raw.rs
templates/: demo.askama  index.askama
templates/components/: style.askama  view.askama
templates/js/: prelude.d.ts  script.js
