[package]
name = "weather-station-monitor"
version = "1.0.0"
edition = "2024"

[features]
default = ["colorize"]
colorize = []

[dependencies]
askama = { version = "0.15.6", default-features = false, features = [
    "config",
    "derive",
] }
atoi = { version = "2.0.0", default-features = false }
const-default = { version = "1.0.0", default-features = false, features = [
    "derive",
] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.7.0", features = ["log"] }
cyw43-pio = "0.10.0"
dotenvy_macro = "0.15.7"
edge-dhcp = { git = "https://github.com/sysgrok/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0", features = [
    "log",
] }
edge-http = { git = "https://github.com/sysgrok/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0", features = [
    "log",
] }
edge-nal = { git = "https://github.com/sysgrok/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }
edge-nal-embassy = { git = "https://github.com/sysgrok/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0", features = [
    "log",
] }
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = [
    "log",
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-net = { version = "0.9.1", features = [
    "log",
    "tcp",
    "udp",
    "dhcpv4",
    "dhcpv4-hostname",
    "proto-ipv4",
] }
embassy-rp = { version = "0.10.0", features = [
    "log",
    "rp2040",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-sync = { version = "0.8.0", default-features = false, features = [
    "log",
] }
embassy-time = { version = "0.5.1", features = ["log"] }
embassy-usb = { version = "0.6.0", features = ["log"] }
embassy-usb-logger = "0.6.0"
embedded-io-async = "0.7.0"
futures = { version = "0.3.32", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
] }
heapless = "0.9.2"
log = "0.4.29"
num-traits = { version = "0.2.19", default-features = false }
picoserve = { version = "0.18.0", features = ["json"] }
portable-atomic = { version = "1.13.1", default-features = false, features = [
    "critical-section",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
static_cell = "2.1.1"
thiserror = { version = "2.0.18", default-features = false }
uom = { version = "0.38.0", default-features = false, features = [
    "si",
    "f32",
    "u8",
    "u16",
] }

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
panic = "abort"
opt-level = 3
